add exception handling and response DTOs for improved error management