@@ -11,7 +11,9 @@ package com.backend.productservice.services.serviceImpl;
 import com.backend.commonservice.model.ItemNotFoundException;
 import com.backend.productservice.dto.reponse.ProductReponse;
 import com.backend.productservice.dto.request.ProductCreationRequest;
+import com.backend.productservice.model.Category;
 import com.backend.productservice.model.Product;
+import com.backend.productservice.repository.CategorytRepository;
 import com.backend.productservice.repository.ProductRepository;
 import com.backend.productservice.services.ProductService;
 import lombok.experimental.FieldDefaults;
@@ -21,16 +23,19 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @FieldDefaults(level = lombok.AccessLevel.PRIVATE, makeFinal = true)
 @Slf4j
 public class ProductServiceImpl implements ProductService {
     ProductRepository productRep;
+    CategorytRepository categorytRep;
     ModelMapper modelMapper;
 
-    public ProductServiceImpl(ProductRepository productRep, ModelMapper modelMapper) {
+    public ProductServiceImpl(ProductRepository productRep, CategorytRepository categorytRep, ModelMapper modelMapper) {
         this.productRep = productRep;
+        this.categorytRep = categorytRep;
         this.modelMapper = modelMapper;
     }
 
@@ -46,11 +51,13 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public List<ProductReponse> getAllProduct() {
-        return productRep.findAll().stream().map(this::toProductReponse).toList();
+        log.info("In method get all Product");
+        return productRep.findAll().stream().map(this::toProductReponse).collect(Collectors.toList());
     }
 
     @Override
     public ProductReponse getProductById(Long id) {
+        log.info("In method get Product by id");
         Product p = productRep.findById(id).orElseThrow(() -> new ItemNotFoundException("Product", "id", id));
         return toProductReponse(p);
     }
@@ -59,13 +66,17 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public ProductReponse saveProduct(ProductCreationRequest product) {
         log.info("In method save Product");
-        Product p = productRep.save(toProduct(product));
+        Category c = categorytRep.findById(product.getCategory_id()).orElseThrow(() -> new ItemNotFoundException("Category", "id", product.getCategory_id()));
+        Product p = toProduct(product);
+        p.setCategory(c);
+        productRep.save(p);
         return toProductReponse(p);
     }
 
     @Transactional
     @Override
     public ProductReponse updateProduct(Long id, ProductCreationRequest product) {
+        log.info("In method update Product");
         Product p = productRep.findById(id).orElseThrow(() -> new ItemNotFoundException("Product", "id", id));
         return toProductReponse(productRep.save(p));
     }
@@ -73,6 +84,7 @@ public class ProductServiceImpl implements ProductService {
     @Transactional
     @Override
     public boolean deleteProduct(Long id) {
+        log.info("In method delete Product");
         productRep.deleteById(id);
         return true;
     }
